--- a/JS-lessons/lesson11/homework11/index.html
+++ b/JS-lessons/lesson11/homework11/index.html
@@ -5,29 +5,29 @@
     <title>Homework11</title>
 </head>
 <body>
-<!--<form>-->
-<!--    <label> Enter your name-->
-<!--        <input name="name" type="text"/>-->
-<!--    </label>-->
-<!--    <label> age-->
-<!--        <input name="age" type="number"/>-->
-<!--    </label>-->
-
-<!--    <button id="btn">Send</button>-->
-<!--</form>-->
-
-<form>
-    <label>Name:
-        <input id="name" type="text"/>
+<form name = 'f1'>
+    <label> Enter your name
+        <input name="username" type="text"/>
     </label>
-    <label>Age:
-        <input id="age" type="number"/>
+    <label> age
+        <input name="age" type="number"/>
     </label>
 
     <button id="btn">Send</button>
 </form>
+
+<!--<form>-->
+<!--    <label>Name:-->
+<!--        <input id="name" type="text"/>-->
+<!--    </label>-->
+<!--    <label>Age:-->
+<!--        <input id="age" type="number"/>-->
+<!--    </label>-->
+
+<!--    <button id="btn">Send</button>-->
+<!--</form>-->
 <hr>
-<form>
+<form name="forCars">
     <label>Name:
         <input id="model" type="text"/>
     </label>
