--- a/JS-lessons/lesson11/classwork11/index.html
+++ b/JS-lessons/lesson11/classwork11/index.html
@@ -13,10 +13,16 @@
         div {
             height: 30px;
         }
+        /*#users {*/
+        /*    height: 350px;*/
+        /*}*/
     </style>
 </head>
 <body>
 <div id = "users"></div>
+
+<a href="./favorites">Go to page</a>
+
 <script src="script11.js">
 
 
