--- a/JS-lessons/lesson12/homework/indexh12.html
+++ b/JS-lessons/lesson12/homework/indexh12.html
@@ -31,9 +31,31 @@
             justify-content: center;
             align-items: center;
         }
-        p {
+        .both {
+            display: flex;
+        }
+        .main {
+            display: flex;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+        }
+        .subsection {
+            width: 300px;
+            height: 320px;
+            border: 5px outset deeppink;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-left: 10px;
+            margin:30px 30px;
+            box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
 
         }
+         h5 {
+            color: #2549ae;
+        }
+
+
     </style>
 </head>
 <body>
