--- a/JS-lessons/lesson10/homework/index.html
+++ b/JS-lessons/lesson10/homework/index.html
@@ -11,10 +11,7 @@
         .menu.hidden ul {
             display: none;
         }
-        pHidden {
-            display: none;
 
-        }
     </style>
 </head>
 
@@ -23,19 +20,20 @@
 <!--<input type="button" value="vanish" id="btn">-->
 <!--<input type="button" onclick="this.style.display='none'" value="vanish" >-->
 <!--<form>-->
-<!--<input type="text" name="age" pattern="[0-9]{2}">-->
-<!--<button>Verify</button>-->
+<!--    <input type="text" id="age">-->
+<!--    <button id="btn">Verify</button>-->
 <!--</form>-->
 
-<!--<div class="menu">-->
-<!--    <h3 class="title">Click me</h3>-->
-<!--    <ul>-->
-<!--        <li>Monday</li>-->
-<!--        <li>Wednesday</li>-->
-<!--        <li>Sunday</li>-->
-<!--    </ul>-->
 
-<!--</div>-->
+<div class="menu">
+    <h3 class="title">Click me</h3>
+    <ul>
+        <li>Monday</li>
+        <li>Wednesday</li>
+        <li>Sunday</li>
+    </ul>
+
+</div>
 
 
 <script src="script10.js">
