--- a/JS-lessons/lesson10/classwork/test.html
+++ b/JS-lessons/lesson10/classwork/test.html
@@ -19,20 +19,9 @@
         cursor: pointer;
         position:relative;
     }
-
-    .menu .title::before {
-        content: '▶ ';
-        position:absolute;
-        color: green;
-        top:-2px;
-        left:0;
+    .pHidden {
+        display: none;
     }
-
-    .menu.hidden .title::before {
-        content: '▼ ';
-        top:1px;
-    }
-
 
 </style>
 </head>
@@ -50,17 +39,47 @@
 </div>
 
 <script>
-    /*let ulElemenet = document.getElementsByClassName("dulces");
-    let titleElement = document.getElementsByClassName("title");
-    titleElement.onclick = function(){
-      ulElemenet.classList.toggle("hidden");
-    }*/
+    // let ulElemenet = document.getElementsByClassName("dulces");
+    // let titleElement = document.getElementsByClassName("title");
+    // titleElement.onclick = function(){
+    //   ulElemenet.classList.toggle("hidden");
+    // }
     let menuElement = document.querySelector('.dulces');
     let titleElement = menuElement.querySelector('.title');
 
     titleElement.onclick = function() {
         menuElement.classList.toggle('hidden');
     };
+
+
+
+    // let comments = [
+    //     {name: 'Максим', body: 'Вчи English'},
+    //     {name: 'Іван', body: 'Досить сидіти, вже пізно'},
+    //     {name: 'Льоня', body: 'Зупка, стине, ходи додому'},
+    //     {name: 'Іра', body: 'Воно, тобі треба?'},
+    // ];
+    //
+    // let divFather = document.createElement('div');
+    // for (const item of comments) {
+    //     let div = document.createElement('div');
+    //     let h3 = document.createElement('h3');
+    //     let p = document.createElement('p');
+    //     let btn = document.createElement('button');
+    //     let hr = document.createElement('hr');
+    //
+    //     h3.innerText = item.name;
+    //     p.innerHTML = item.body;
+    //     btn.innerHTML = 'Закрий мене'
+    //
+    //     btn.onclick = () => {
+    //         p.classList.add('pHidden');
+    //         // btn.previousElementSibling.classList.add('pHidden');  // 2варінт який звертаєтсья до ПОПЕРЕДНЬОГО елементу перед btn
+    //     }
+    //     div.append(h3, p, btn);
+    //     divFather.append(div, hr);
+    // }
+    // document.body.appendChild(divFather)
 </script>
 </body>
 </html>
