--- a/JS-lessons/lesson10/homework/index.html
+++ b/JS-lessons/lesson10/homework/index.html
@@ -11,29 +11,35 @@
         .menu.hidden ul {
             display: none;
         }
+        .xxx {
+            display: none;
+        }
 
     </style>
 </head>
 
 <body>
-<!--<div id="text">Some text</div>-->
-<!--<input type="button" value="vanish" id="btn">-->
+<div id="text">Some text</div>
+<input type="button" value="vanish" id="btn">
+
 <!--<input type="button" onclick="this.style.display='none'" value="vanish" >-->
+
+
 <!--<form>-->
 <!--    <input type="text" id="age">-->
 <!--    <button id="btn">Verify</button>-->
 <!--</form>-->
 
 
-<div class="menu">
-    <h3 class="title">Click me</h3>
-    <ul>
-        <li>Monday</li>
-        <li>Wednesday</li>
-        <li>Sunday</li>
-    </ul>
+<!--<div class="menu">-->
+<!--    <h3 class="title">Click me</h3>-->
+<!--    <ul>-->
+<!--        <li>Monday</li>-->
+<!--        <li>Wednesday</li>-->
+<!--        <li>Sunday</li>-->
+<!--    </ul>-->
 
-</div>
+<!--</div>-->
 
 
 <script src="script10.js">
