--- a/JS-lessons/lesson10/classwork/indexcl.html
+++ b/JS-lessons/lesson10/classwork/indexcl.html
@@ -5,6 +5,13 @@
     <title>Classwork10</title>
 </head>
 <body>
+<!--<form id="test1">-->
+<!--<input type = "text" name = "comment1">-->
+<!--    <input type = "text" name = "comment2">-->
+<!--    <button>Push</button>-->
+<!--</form>-->
+<hr>
+
 <script src="script10-cl.js"></script>
 </body>
 </html>
