--- a/JS-lessons/project/mainn.html
+++ b/JS-lessons/project/mainn.html
@@ -5,6 +5,8 @@
     <title>Main page</title>
 </head>
 <body>
-
+<link rel="stylesheet" href="design.css">
+<div class="users"></div>
+<script src="script.js"></script>
 </body>
 </html>
