--- a/JS-lessons/project/post-details.html
+++ b/JS-lessons/project/post-details.html
@@ -5,6 +5,11 @@
     <title>Post Details</title>
 </head>
 <body>
+<link rel="stylesheet" href="design.css">
+
 <h1>Post Details Page</h1>
+<div class="postAdd"></div>
+<ol class="comments"></ol>
+<script src="post-details.js"></script>
 </body>
 </html>
