--- a/JS-lessons/project/user-details.html
+++ b/JS-lessons/project/user-details.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="design.css">
 </head>
 <body>
-<div class="user-details"></div>
+<div class="user-details">
+
+</div>
 <button class="postDetailsButton">Post Details</button>
 <div class="posts"></div>
 
@@ -14,11 +16,32 @@
     let url = new URL(location.href)
     console.log(url)
     let user = JSON.parse(url.searchParams.get('data'))
+    let userAddress = user.address
     let userDetailsContainer = document.getElementsByClassName('user-details')[0]
     let postsContainer = document.getElementsByClassName('posts')[0]
     let postsDetailsButton = document.getElementsByClassName('postDetailsButton')[0]
     userDetailsContainer.innerText = `${JSON.stringify(user)}`
+
+    userDetailsContainer.innerHTML = ` <h2>Id: ${user.id}</h2>
+
+ <h4>Name: ${user.name} ${user.username}</h4>
+ <h4>Name: ${user.email}</h4>
+ <h4>Address: <ul><li>${userAddress.street}</li>
+ <li>${userAddress.suite}</li>
+ <li>${userAddress.city}</li>
+ <li>${userAddress.zipcode}</li>
+ <li>lat: ${userAddress.geo.lat}</li>
+ <li>lng: ${userAddress.geo.lng}</li></ul></h4>
+ <h4>Phone: ${user.phone}</h4>
+ <h4>Website: ${user.website}</h4>
+ <h4>Company: ${user.company.name}</h4>
+ <h4>Catchphrase: ${user.company.catchPhrase}</h4>
+ <h4>Catchphrase: ${user.company.catchPhrase}</h4>
+ <h4>bs: ${user.company.bs}</h4>`
+
+
     postsDetailsButton.onclick = function () {
+        this.disabled = true
         fetch(`https://jsonplaceholder.typicode.com/users/${user.id}/posts`)
             .then(value => value.json())
             .then (value => {
@@ -29,7 +52,8 @@
                     let postDetailsButton = document.createElement('button')
                     postDetailsButton.innerText = 'More information'
                     postDetailsButton.onclick = function () {
-                        location.href = './post-details.html'
+                        location.href = `./post-details.html?data=${JSON.stringify(postItem)}`
+
                     }
                     postContainer.appendChild(postDetailsButton)
                     postsContainer.append(postContainer)
